# Python-Practice

LabOOMethods/: .project  README.md  setup.cfg
LabOOMethods/src/: testmammals.py
LabOOMethods/src/bio/: mammals.py  musicplayer.py  vehicles.py
labmusicplayergui_src/: .project  musicplayer.py
