[metadata]
name = bio-ADD_YOUR_USER_NAME_HERE
version = 0.0.1
author = ADD_YOUR_NAMES_HERE
author_email = author@example.com
description = A bio package
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License ::
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
